# angular-bazel-monorepo

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  package.json  tsconfig.json
projects/app1/: BUILD.bazel  app.component.ts  app.module.ts  app1.component.ts  app1.module.ts  index.dev.html  main.dev.ts  package.json
projects/app2/: BUILD.bazel  app2.component.ts  app2.module.ts  package.json
projects/app2/button/: BUILD.bazel  button.component.ts
projects/project_one/: BUILD.bazel  index.dev.html  index.prod.html  main.prod.ts  package.json
projects/project_one/src-legacy/app/: BUILD.bazel  legacy.app.ts
projects/project_one/src-legacy/app/hero/: BUILD.bazel  hero.component.ts
projects/project_one/src/app/: BUILD.bazel  app.component.ts  app.module.ts
projects/project_one/src/app/dashboard/: BUILD.bazel  dashboard.component.ts  dashboard.module.ts
projects/project_two/: BUILD.bazel  index.dev.html  main.dev.ts  package.json
projects/project_two/button/: BUILD.bazel  button.component.ts  button.module.ts
projects/project_two/src/app/: BUILD.bazel  app.component.ts  app.module.ts
projects/project_two/src/app/dashboard/: BUILD.bazel  dashboard.component.ts  dashboard.module.ts
tools/: angular_ts_library.bzl
tools/angularLib/: angular_ts_library.bzl
tools/app1/: angular_ts_library.bzl
tools/app2/: angular_ts_library.bzl
tools/libOne/: angular_ts_library.bzl
tools/project_one/: angular_ts_library.bzl
tools/project_two/: angular_ts_library.bzl
tools/shared_components/: angular_ts_library.bzl
