load("@npm//@bazel/typescript:index.bzl", "ts_config")
load("//tools/app2:angular_ts_library.bzl", "ng_ts_project")

package(default_visibility = ["//visibility:public"])

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = [
        "//:tsconfig",
    ],
)

ng_ts_project(
    name = "app2",
    srcs = glob(["*.ts"]),
    tsconfig = ":tsconfig",
    deps = [
        "//packages/libOne",
        "//packages/angularLib",
        "//projects/app2/button",
        "@npm//@types/node",
        "@npm_app2//@angular/core",
        "@npm_app2//@angular/common",
        "@npm_angularLib//@angular/common",
    ],
)
