load("@npm//@bazel/typescript:index.bzl", "ts_config")
load("//tools/project_two:angular_ts_library.bzl", "ng_ts_project")

package(default_visibility = ["//visibility:public"])

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = [
        "//:tsconfig",
    ],
)

ng_ts_project(
    name = "project_two",
    srcs = glob(["*.ts"]),
    tsconfig = ":tsconfig",
    deps = [
        "//packages/libOne",
        "//packages/angularLib",
        "//projects/project_two/button",
        "@npm//@types/node",
        "@npm_project_two//@angular/core",
        "@npm_project_two//@angular/common",
        "@npm_angularLib//:node_modules",
    ],
)
