load("//tools/project_two:angular_ts_library.bzl", "ng_ts_project")

package(default_visibility = ["//visibility:public"])

ng_ts_project(
    name = "button",
    srcs = glob(["*.ts"]),
    tsconfig = "//projects/project_two:tsconfig",
    deps = [
        "@npm//@types/node",
        "@npm_project_two//@angular/core",
        "@npm_project_two//@angular/material",
    ],
)
