load("//tools/project_one:angular_ts_library.bzl", "ng_ts_project")

package(default_visibility = ["//:__subpackages__"])

ng_ts_project(
    name = "app",
    srcs = glob(["*.ts"]),
    deps = [
        "@npm//@types/node",
        "@npm_project_one//@angular/common",
        "@npm_project_one//@angular/upgrade",
        "@npm_project_one//@types/angular",
        "@npm_project_one//@types/jquery",
        "@npm_project_one//angular",
        "@npm_project_one//jquery",
        "//projects/project_one/src-legacy/app/hero"
    ],
)