load("//tools/project_one:angular_ts_library.bzl", "ng_ts_project")

ng_ts_project(
    name = "app",
    srcs = ["app.module.ts", "app.component.ts"],
    # angular_assets = ["app.component.html"],
    tsconfig = ":tsconfig",
    deps = [
        "@npm_project_one//@angular/common",
        "@npm_project_one//@angular/core",
        "@npm_project_one//@angular/platform-browser",
    ],
)
