load("//tools/project_two:angular_ts_library.bzl", "ng_ts_project")

package(default_visibility = ["//:__subpackages__"])

ng_ts_project(
    name = "dashboard",
    srcs = glob(["*.ts"]),
    deps = [
        "@npm_project_two//@angular/core",
        "@npm_project_two//@angular/material",
        "@npm_project_two//@packages/shared-components",
        "@npm_project_two//@packages/lib-js",
        "@npm_project_two//@packages/lib-ts",
    ],
)
